# opencrux

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
.github/: copilot-instructions.md
.github/prompts/: opencrux-autoresearch-supervised-dry-run.prompt.md
.github/workflows/: targeted-verification.yml
.wrangler/cache/: pages.json  wrangler-account.json
data/samples/: README.md  manifest.json  manifest.template.json
docs/: autopilot-session-protocol.md  autoresearch-benchmark-v1.md  autoresearch-heuristic-protocol.md  manual-verification.md  milestone-1.md  milestone-2-gemma4-plan.md  milestone-2.md  milestone-operations.md  next-session-handover.md  phase-1-1-hardening-log.md  phase-1-2-verification-operationalization-log.md  phase-1-3-ci-wiring-log.md  phase-1-3-ci-wiring-plan.md  phase-template.md  prd-status.md  ui-phase-1-verification-log.md  ui-revamp-phase-1-handoff.md  ui-revamp-plan.md
evals/milestone1/: baseline-score-v1.json  benchmark-expectations-v1.json  benchmark-manifest-v1.json
prototypes/: adventure-mag.html  dark-neon.html  index.html  playful-3d.html  retro-arcade.html  skate-punk.html  split-contrast.html  warm-earth.html
scripts/: evaluate_heuristic_benchmark.py  run-local.sh  run_autoresearch_benchmark.sh  run_targeted_verification.sh
src/opencrux/: analysis.py  cli.py  (+14 more)
tests/: test_analysis.py  test_annotator.py  test_app.py  test_biomechanics.py  test_browser_smoke.py  test_cli.py  test_db.py  test_export.py  test_gemini_llm.py  test_heuristic_benchmark.py  test_model_setup.py  test_vision_llm.py
(+24 files in other folders)
